--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-azalea = { git = "https://github.com/mat-1/azalea" }
-# azalea = { path = "../azalea/azalea" }
+azalea = { git = "https://github.com/azalea-rs/azalea" }
